```xml
<?xml version="1.0"?>
<package format="2">
  <name>reeds_shepp_curves</name>
  <version>0.0.1</version>
  <description>
    Reeds-Shepp and Theta* path planning library with ROS integration.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- ROS dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Export information -->
  <export>
  </export>
</package>
```
